# AICodeAnalyzer

./: .gitignore  .pre-commit-config.yaml  .vscodeignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  tsconfig.json
.github/workflows/: ci.yml  release.yml
src/: analyzer.ts  extension.ts  resultsProvider.ts
src/ai_toolkit/: __init__.py  ai_testing.py  bug_patterns.py  code_analyzer.py  core.py  llm.py  utils.py
src/test/: runTest.ts
src/test/suite/: extension.test.ts  index.ts
test-fixtures/: ai_generated.py
tests/: __init__.py  test_core.py
tests/e2e/: test_extension.js  test_extension.js.map  test_extension.ts
tests/integration/: test_workflow.py
tests/unit/: test_analyzer.py  test_bug_patterns.py  test_cli.py  test_code_analyzer_methods.py
